[project]
name = "ghkeys"
version = "1.0.0"
description = "Fetch SSH public keys from GitHub users"
authors = [{ name = "bjornmorten", email = "bjornmdev@proton.me" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["aiohttp"]

[project.urls]
Homepage = "https://github.com/bjornmorten/ghkeys"
Repository = "https://github.com/bjornmorten/ghkeys"
Issues = "https://github.com/bjornmorten/ghkeys/issues"

[project.scripts]
ghkeys = "ghkeys:main"
